INTYG-2189: Tagit bort uppdatering av laddade classer jetty. Flyttat versioner till properties