@@ -28,10 +28,7 @@ gretty {
         contextConfigFile = "${projectDir}/src/main/webapp/WEB-INF/jetty-context.xml"
     }
     logbackConfigFile = "${projectDir}/src/main/resources/logback.xml"
-    debugSuspend = false
-    scanInterval=1
-    managedClassReload=true
-    jvmArgs = [jvmArgSpringProfiles, '-Dstatistics.test.max.intyg=500', '-XX:MaxPermSize=256M']
+    jvmArgs = [jvmArgSpringProfiles, '-Dstatistics.test.max.intyg=500']
 }
 
 node {
@@ -90,24 +87,25 @@ jar.dependsOn createVersionPropertyFile
 dependencies {
     compile project(':statistik-service')
 
-    compile "org.springframework.security.extensions:spring-security-saml2-core:1.0.1.RELEASE"
-    compile "xml-apis:xml-apis:1.4.01"
-    compile "org.springframework:spring-webmvc:$springContextVersion"
-    compile "org.apache.commons:commons-lang3:3.2.1"
+    compile "org.springframework.security.extensions:spring-security-saml2-core:${springSecuritySamlVersion}"
+    compile "xml-apis:xml-apis:${xmlApisVersion}"
+    compile "org.springframework:spring-webmvc:${springContextVersion}"
+    compile "org.apache.commons:commons-lang3:${commonsLang3Version}"
     compile "org.springframework.security:spring-security-config:${springSecurityVersion}"
     compile "org.springframework.security:spring-security-taglibs:${springSecurityVersion}"
-    compile "org.apache.poi:poi:3.11"
-    compile "org.apache.poi:poi-ooxml:3.11"
-    compile "xalan:xalan:2.7.2"
+    compile "org.apache.poi:poi:${poiVersion}"
+    compile "org.apache.poi:poi-ooxml:${poiVersion}"
+    compile "xalan:xalan:${xalanVersion}"
 
     compile webjars //Define your webjar in the list above
 
-    gretty "com.h2database:h2:1.3.171"
-    gretty "mysql:mysql-connector-java:5.1.29"
-    gretty "org.apache.activemq:activemq-broker:5.8.0"
-    gretty 'org.apache.activemq:activemq-pool:5.8.0'
-    gretty "org.apache.tomcat:tomcat-catalina:7.0.20"
-    gretty 'org.eclipse.jetty:jetty-jmx:9.2.10.v20150310'
-    providedCompile "javax.servlet:javax.servlet-api:3.1.0"
-    testRuntime "com.h2database:h2:1.3.171"
+    gretty "com.h2database:h2:${h2Version}"
+    gretty "mysql:mysql-connector-java:${mysqlConnectorVersion}"
+    gretty "org.apache.activemq:activemq-broker:${activeMqVersion}"
+    gretty "org.apache.activemq:activemq-pool:${activeMqVersion}"
+    gretty "org.apache.tomcat:tomcat-catalina:${tomcatVersion}"
+    gretty "org.eclipse.jetty:jetty-jmx:${jettyJmxVersion}"
+
+    providedCompile "javax.servlet:javax.servlet-api:${javaxServletVersion}"
+    testRuntime "com.h2database:h2:${h2Version}"
 }
